[skip ci]Pipeline build check in.

--- a/docbuild/api/Scrapbook101core.HelperClasses.yml
+++ b/docbuild/api/Scrapbook101core.HelperClasses.yml
@@ -1,34 +1,35 @@
 ### YamlMime:ManagedReference
 items:
-- uid: Scrapbook101core.GeoCodeHelper
-  commentId: T:Scrapbook101core.GeoCodeHelper
-  id: GeoCodeHelper
+- uid: Scrapbook101core.HelperClasses
+  commentId: T:Scrapbook101core.HelperClasses
+  id: HelperClasses
   parent: Scrapbook101core
   children:
-  - Scrapbook101core.GeoCodeHelper.GetGeocode(System.String)
+  - Scrapbook101core.HelperClasses.BuildPathList(System.Collections.Generic.IEnumerable{Scrapbook101core.Models.Item})
+  - Scrapbook101core.HelperClasses.GetGeocode(System.String)
   langs:
   - csharp
   - vb
-  name: GeoCodeHelper
-  nameWithType: GeoCodeHelper
-  fullName: Scrapbook101core.GeoCodeHelper
+  name: HelperClasses
+  nameWithType: HelperClasses
+  fullName: Scrapbook101core.HelperClasses
   type: Class
   source:
     remote:
-      path: Scrapbook101core/Geocode.cs
+      path: Scrapbook101core/HelperClasses.cs
       branch: master
       repo: https://github.com/travelmarx/scrapbook101core
-    id: GeoCodeHelper
-    path: ../Scrapbook101core/Geocode.cs
-    startLine: 9
+    id: HelperClasses
+    path: ../Scrapbook101core/HelperClasses.cs
+    startLine: 12
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
-  summary: "\nDefines a static method to convert a string location to a geocode (latitude and longitude).\n"
+  summary: "\nDefines helper methods for use in Scrapbook101core.\n"
   example: []
   syntax:
-    content: public static class GeoCodeHelper
-    content.vb: Public Module GeoCodeHelper
+    content: public static class HelperClasses
+    content.vb: Public Module HelperClasses
   inheritance:
   - System.Object
   inheritedMembers:
@@ -46,29 +47,74 @@ items:
   modifiers.vb:
   - Public
   - Module
-- uid: Scrapbook101core.GeoCodeHelper.GetGeocode(System.String)
-  commentId: M:Scrapbook101core.GeoCodeHelper.GetGeocode(System.String)
+- uid: Scrapbook101core.HelperClasses.BuildPathList(System.Collections.Generic.IEnumerable{Scrapbook101core.Models.Item})
+  commentId: M:Scrapbook101core.HelperClasses.BuildPathList(System.Collections.Generic.IEnumerable{Scrapbook101core.Models.Item})
+  id: BuildPathList(System.Collections.Generic.IEnumerable{Scrapbook101core.Models.Item})
+  parent: Scrapbook101core.HelperClasses
+  langs:
+  - csharp
+  - vb
+  name: BuildPathList(IEnumerable<Item>)
+  nameWithType: HelperClasses.BuildPathList(IEnumerable<Item>)
+  fullName: Scrapbook101core.HelperClasses.BuildPathList(System.Collections.Generic.IEnumerable<Scrapbook101core.Models.Item>)
+  type: Method
+  source:
+    remote:
+      path: Scrapbook101core/HelperClasses.cs
+      branch: master
+      repo: https://github.com/travelmarx/scrapbook101core
+    id: BuildPathList
+    path: ../Scrapbook101core/HelperClasses.cs
+    startLine: 19
+  assemblies:
+  - Scrapbook101core
+  namespace: Scrapbook101core
+  summary: "\nReturns paths for images to display for a list of Scrapbook101core items. \n"
+  example: []
+  syntax:
+    content: public static List<string> BuildPathList(IEnumerable<Item> items)
+    parameters:
+    - id: items
+      type: System.Collections.Generic.IEnumerable{Scrapbook101core.Models.Item}
+      description: A list of Scrapbook101core items to get the qualified path.
+    return:
+      type: System.Collections.Generic.List{System.String}
+      description: ''
+    content.vb: Public Shared Function BuildPathList(items As IEnumerable(Of Item)) As List(Of String)
+  overload: Scrapbook101core.HelperClasses.BuildPathList*
+  nameWithType.vb: HelperClasses.BuildPathList(IEnumerable(Of Item))
+  modifiers.csharp:
+  - public
+  - static
+  modifiers.vb:
+  - Public
+  - Shared
+  fullName.vb: Scrapbook101core.HelperClasses.BuildPathList(System.Collections.Generic.IEnumerable(Of Scrapbook101core.Models.Item))
+  name.vb: BuildPathList(IEnumerable(Of Item))
+- uid: Scrapbook101core.HelperClasses.GetGeocode(System.String)
+  commentId: M:Scrapbook101core.HelperClasses.GetGeocode(System.String)
   id: GetGeocode(System.String)
-  parent: Scrapbook101core.GeoCodeHelper
+  parent: Scrapbook101core.HelperClasses
   langs:
   - csharp
   - vb
   name: GetGeocode(String)
-  nameWithType: GeoCodeHelper.GetGeocode(String)
-  fullName: Scrapbook101core.GeoCodeHelper.GetGeocode(System.String)
+  nameWithType: HelperClasses.GetGeocode(String)
+  fullName: Scrapbook101core.HelperClasses.GetGeocode(System.String)
   type: Method
   source:
     remote:
-      path: Scrapbook101core/Geocode.cs
+      path: Scrapbook101core/HelperClasses.cs
       branch: master
       repo: https://github.com/travelmarx/scrapbook101core
     id: GetGeocode
-    path: ../Scrapbook101core/Geocode.cs
-    startLine: 17
+    path: ../Scrapbook101core/HelperClasses.cs
+    startLine: 61
   assemblies:
   - Scrapbook101core
   namespace: Scrapbook101core
-  summary: "\nGets the geocode (latitude, longitude) from a string location description.\n"
+  summary: "\nA static method to convert a string location to a geocode (latitude and longitude).\n"
+  remarks: "\nGets the geocode (latitude, longitude) from a string location description.\n"
   example: []
   syntax:
     content: public static Task<double[]> GetGeocode(string location)
@@ -80,7 +126,7 @@ items:
       type: System.Threading.Tasks.Task{System.Double[]}
       description: A struct of doubles representing longitude and latitude.
     content.vb: Public Shared Function GetGeocode(location As String) As Task(Of Double())
-  overload: Scrapbook101core.GeoCodeHelper.GetGeocode*
+  overload: Scrapbook101core.HelperClasses.GetGeocode*
   modifiers.csharp:
   - public
   - static
@@ -385,11 +431,186 @@ references:
   name: System
   nameWithType: System
   fullName: System
-- uid: Scrapbook101core.GeoCodeHelper.GetGeocode*
-  commentId: Overload:Scrapbook101core.GeoCodeHelper.GetGeocode
+- uid: Scrapbook101core.HelperClasses.BuildPathList*
+  commentId: Overload:Scrapbook101core.HelperClasses.BuildPathList
+  name: BuildPathList
+  nameWithType: HelperClasses.BuildPathList
+  fullName: Scrapbook101core.HelperClasses.BuildPathList
+- uid: System.Collections.Generic.IEnumerable{Scrapbook101core.Models.Item}
+  commentId: T:System.Collections.Generic.IEnumerable{Scrapbook101core.Models.Item}
+  parent: System.Collections.Generic
+  definition: System.Collections.Generic.IEnumerable`1
+  name: IEnumerable<Item>
+  nameWithType: IEnumerable<Item>
+  fullName: System.Collections.Generic.IEnumerable<Scrapbook101core.Models.Item>
+  nameWithType.vb: IEnumerable(Of Item)
+  fullName.vb: System.Collections.Generic.IEnumerable(Of Scrapbook101core.Models.Item)
+  name.vb: IEnumerable(Of Item)
+  spec.csharp:
+  - uid: System.Collections.Generic.IEnumerable`1
+    name: IEnumerable
+    nameWithType: IEnumerable
+    fullName: System.Collections.Generic.IEnumerable
+    isExternal: true
+  - name: <
+    nameWithType: <
+    fullName: <
+  - uid: Scrapbook101core.Models.Item
+    name: Item
+    nameWithType: Item
+    fullName: Scrapbook101core.Models.Item
+  - name: '>'
+    nameWithType: '>'
+    fullName: '>'
+  spec.vb:
+  - uid: System.Collections.Generic.IEnumerable`1
+    name: IEnumerable
+    nameWithType: IEnumerable
+    fullName: System.Collections.Generic.IEnumerable
+    isExternal: true
+  - name: '(Of '
+    nameWithType: '(Of '
+    fullName: '(Of '
+  - uid: Scrapbook101core.Models.Item
+    name: Item
+    nameWithType: Item
+    fullName: Scrapbook101core.Models.Item
+  - name: )
+    nameWithType: )
+    fullName: )
+- uid: System.Collections.Generic.List{System.String}
+  commentId: T:System.Collections.Generic.List{System.String}
+  parent: System.Collections.Generic
+  definition: System.Collections.Generic.List`1
+  name: List<String>
+  nameWithType: List<String>
+  fullName: System.Collections.Generic.List<System.String>
+  nameWithType.vb: List(Of String)
+  fullName.vb: System.Collections.Generic.List(Of System.String)
+  name.vb: List(Of String)
+  spec.csharp:
+  - uid: System.Collections.Generic.List`1
+    name: List
+    nameWithType: List
+    fullName: System.Collections.Generic.List
+    isExternal: true
+  - name: <
+    nameWithType: <
+    fullName: <
+  - uid: System.String
+    name: String
+    nameWithType: String
+    fullName: System.String
+    isExternal: true
+  - name: '>'
+    nameWithType: '>'
+    fullName: '>'
+  spec.vb:
+  - uid: System.Collections.Generic.List`1
+    name: List
+    nameWithType: List
+    fullName: System.Collections.Generic.List
+    isExternal: true
+  - name: '(Of '
+    nameWithType: '(Of '
+    fullName: '(Of '
+  - uid: System.String
+    name: String
+    nameWithType: String
+    fullName: System.String
+    isExternal: true
+  - name: )
+    nameWithType: )
+    fullName: )
+- uid: System.Collections.Generic.IEnumerable`1
+  commentId: T:System.Collections.Generic.IEnumerable`1
+  isExternal: true
+  name: IEnumerable<T>
+  nameWithType: IEnumerable<T>
+  fullName: System.Collections.Generic.IEnumerable<T>
+  nameWithType.vb: IEnumerable(Of T)
+  fullName.vb: System.Collections.Generic.IEnumerable(Of T)
+  name.vb: IEnumerable(Of T)
+  spec.csharp:
+  - uid: System.Collections.Generic.IEnumerable`1
+    name: IEnumerable
+    nameWithType: IEnumerable
+    fullName: System.Collections.Generic.IEnumerable
+    isExternal: true
+  - name: <
+    nameWithType: <
+    fullName: <
+  - name: T
+    nameWithType: T
+    fullName: T
+  - name: '>'
+    nameWithType: '>'
+    fullName: '>'
+  spec.vb:
+  - uid: System.Collections.Generic.IEnumerable`1
+    name: IEnumerable
+    nameWithType: IEnumerable
+    fullName: System.Collections.Generic.IEnumerable
+    isExternal: true
+  - name: '(Of '
+    nameWithType: '(Of '
+    fullName: '(Of '
+  - name: T
+    nameWithType: T
+    fullName: T
+  - name: )
+    nameWithType: )
+    fullName: )
+- uid: System.Collections.Generic
+  commentId: N:System.Collections.Generic
+  isExternal: true
+  name: System.Collections.Generic
+  nameWithType: System.Collections.Generic
+  fullName: System.Collections.Generic
+- uid: System.Collections.Generic.List`1
+  commentId: T:System.Collections.Generic.List`1
+  isExternal: true
+  name: List<T>
+  nameWithType: List<T>
+  fullName: System.Collections.Generic.List<T>
+  nameWithType.vb: List(Of T)
+  fullName.vb: System.Collections.Generic.List(Of T)
+  name.vb: List(Of T)
+  spec.csharp:
+  - uid: System.Collections.Generic.List`1
+    name: List
+    nameWithType: List
+    fullName: System.Collections.Generic.List
+    isExternal: true
+  - name: <
+    nameWithType: <
+    fullName: <
+  - name: T
+    nameWithType: T
+    fullName: T
+  - name: '>'
+    nameWithType: '>'
+    fullName: '>'
+  spec.vb:
+  - uid: System.Collections.Generic.List`1
+    name: List
+    nameWithType: List
+    fullName: System.Collections.Generic.List
+    isExternal: true
+  - name: '(Of '
+    nameWithType: '(Of '
+    fullName: '(Of '
+  - name: T
+    nameWithType: T
+    fullName: T
+  - name: )
+    nameWithType: )
+    fullName: )
+- uid: Scrapbook101core.HelperClasses.GetGeocode*
+  commentId: Overload:Scrapbook101core.HelperClasses.GetGeocode
   name: GetGeocode
-  nameWithType: GeoCodeHelper.GetGeocode
-  fullName: Scrapbook101core.GeoCodeHelper.GetGeocode
+  nameWithType: HelperClasses.GetGeocode
+  fullName: Scrapbook101core.HelperClasses.GetGeocode
 - uid: System.String
   commentId: T:System.String
   parent: System
